[gd_scene load_steps=4 format=3 uid="uid://cxjti6x77chjm"]

[ext_resource type="Script" uid="uid://cd4lmrfvsfcmc" path="res://scenes/win_screen.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b4rsypa43rmc6" path="res://assets/Backgrounds/Space.png" id="2"]
[ext_resource type="FontFile" uid="uid://cfcoltj5j404i" path="res://assets/Fonts/kenvector_future_thin.ttf" id="3"]

[node name="WinGame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2")

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="GameOver" type="Label" parent="MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 48
text = "YOU WIN"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnButton" type="Button" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.898684, 0, 0.48666, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 25
text = "Return to Main Menu"

[node name="RestartButton" type="Button" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.0966578, 0.606364, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 25
text = "Restart Game"

[node name="QuitButton" type="Button" parent="MainContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.803556, 3.88896e-05, 0.596509, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_focus_color = Color(0, 0, 1, 1)
theme_override_fonts/font = ExtResource("3")
theme_override_font_sizes/font_size = 25
text = "Quit Game
"

[connection signal="pressed" from="MainContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MainContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="MainContainer/QuitButton" to="." method="_on_quit_button_pressed"]
